--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 	<script src="../lib/js/controls/OrbitControls.js"></script>
 </head>
 <body>
+	<a href="https://tak-emi.github.io/threejs_sample/">戻る</a><br>
 	<script>
 		const width = 500;
 		const height = 300;
