3次Bezier曲線を実装した。

--- a/src/transform.html
+++ b/src/transform.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>テンプレート</title>
+	<title>トランスフォーム</title>
 	<script src="../lib/three.min.js"></script>
 	<script src="../lib/js/controls/OrbitControls.js"></script>
 	<script src="../lib/js/controls/TransformControls.js"></script>
