--- a/src/template.html
+++ b/src/template.html
@@ -4,45 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>テンプレート</title>
-	<script src="../lib/three.min.js"></script>
-	<script src="../lib/js/controls/OrbitControls.js"></script>
+	<script src="js/template.js"></script>
 </head>
 <body>
 	<a href="https://tak-emi.github.io/threejs_sample/">戻る</a><br>
 	<canvas id="canvas"></canvas>
-	<script>
-		const width = 500;
-		const height = 300;
-
-		var scene = new THREE.Scene();
-		var camera = new THREE.PerspectiveCamera( 75, width / height, 0.1, 1000 );
-
-		camera.position.set(100, 100, 100);
-
-		var gridHelper = new THREE.GridHelper( 1000, 100 );
-		scene.add( gridHelper );
-
-		var axesHelper = new THREE.AxesHelper( 1000 );
-		scene.add( axesHelper );
-
-		var renderer = new THREE.WebGLRenderer({
-				canvas: document.querySelector("#canvas")
-			});
-		renderer.setSize( width, height );
-		renderer.setClearColor(0xaaaaaa);
-
-		const camController = new THREE.OrbitControls(camera, renderer.domElement);
-		camController.update();
-
-		function animate() {
-			requestAnimationFrame( animate );
-
-			camController.update();
-
-			renderer.render( scene, camera );
-		}
-
-		animate();
-	</script>
 </body>
 </html>
